# libskype

./: CMakeLists.txt  README.md
doc/: public_api_ref.html
include/: libskype.h
src/: CMakeLists.txt  chat.cpp  contact.cpp  dbus_connection.cpp  dbus_connection.h  libskype.cpp  libskype_internals.h  message.cpp  skypecli.cpp  tokenizer.cpp  tokenizer.h
